--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="adopt_adopt">Adopt</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_shop">ShopActivity</string>
 </resources>
