--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_shop">ShopActivity</string>
+    <string name="title_activity_run">RunActivity</string>
 </resources>
